# bench_nord_servers

./: .gitignore  Cargo.toml  README.md  serverlist.txt  serverlist_partial.txt
src/: .check_connection.rs.swp  .main.rs.swp  check_connection.rs  lib.rs  main.rs
