[package]
name = "bench_nord_servers"
version = "0.1.0"
authors = ["MrShiister <MrShiister@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
public-ip = "0.1.0"
async-std = "1.6.1"
dns-lookup = "1.0.3"
ordered-float = "1.0.2"
